--- a/embedbuilder/interfaces/emojis.html
+++ b/embedbuilder/interfaces/emojis.html
@@ -97,7 +97,7 @@
 					<div class="tsd-signature tsd-kind-icon">emoji<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/5dfabae/index.ts#L28">index.ts:28</a></li>
+							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/1e85ccc/src/embedbuilder.ts#L29">embedbuilder.ts:29</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -143,6 +143,9 @@
 					<li class=" tsd-kind-class">
 						<a href="../classes/embedbuilder.html" class="tsd-kind-icon">Embed<wbr>Builder</a>
 					</li>
+					<li class=" tsd-kind-class">
+						<a href="../classes/pageupdater.html" class="tsd-kind-icon">Page<wbr>Updater</a>
+					</li>
 					<li class=" tsd-kind-interface tsd-is-private tsd-is-not-exported">
 						<a href="emoji.html" class="tsd-kind-icon">Emoji</a>
 					</li>
@@ -158,6 +161,9 @@
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-interface">
+						<a href="pageupdateoptions.html" class="tsd-kind-icon">Page<wbr>Update<wbr>Options</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
