--- a/embedbuilder/interfaces/pageupdateoptions.html
+++ b/embedbuilder/interfaces/pageupdateoptions.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Emoji | discord-embedbuilder</title>
+	<title>PageUpdateOptions | discord-embedbuilder</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,25 +54,21 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="emoji.html">Emoji</a>
+					<a href="pageupdateoptions.html">PageUpdateOptions</a>
 				</li>
 			</ul>
-			<h1>Interface Emoji</h1>
+			<h1>Interface PageUpdateOptions</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
-			<section class="tsd-panel tsd-comment">
-				<div class="tsd-comment tsd-typography">
-				</div>
-			</section>
 			<section class="tsd-panel tsd-hierarchy">
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">Emoji</span>
+						<span class="target">PageUpdateOptions</span>
 					</li>
 				</ul>
 			</section>
@@ -80,65 +76,107 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section tsd-is-not-exported">
+						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="emoji.html#do" class="tsd-kind-icon">do</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="emoji.html#emoji-1" class="tsd-kind-icon">emoji</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="pageupdateoptions.html#cancel" class="tsd-kind-icon">cancel</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="pageupdateoptions.html#cancelformat" class="tsd-kind-icon">cancel<wbr>Format</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="pageupdateoptions.html#invalidpage" class="tsd-kind-icon">invalid<wbr>Page</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="pageupdateoptions.html#message" class="tsd-kind-icon">message</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="pageupdateoptions.html#success" class="tsd-kind-icon">success</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="pageupdateoptions.html#time" class="tsd-kind-icon">time</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
+			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
-					<a name="do" class="tsd-anchor"></a>
-					<h3>do</h3>
-					<div class="tsd-signature tsd-kind-icon">do<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="cancel" class="tsd-anchor"></a>
+					<h3>cancel</h3>
+					<div class="tsd-signature tsd-kind-icon">cancel<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/1e85ccc/src/embedbuilder.ts#L22">embedbuilder.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/1e85ccc/src/reaction/pageupdater.ts#L13">reaction/pageupdater.ts:13</a></li>
 						</ul>
 					</aside>
-					<div class="tsd-type-declaration">
-						<h4>Type declaration</h4>
-						<ul class="tsd-parameters">
-							<li class="tsd-parameter-siganture">
-								<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-property tsd-is-not-exported">
-									<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>sent<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Message</span>, page<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, emoji<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></li>
-								</ul>
-								<ul class="tsd-descriptions">
-									<li class="tsd-description">
-										<h4 class="tsd-parameters-title">Parameters</h4>
-										<ul class="tsd-parameters">
-											<li>
-												<h5>sent: <span class="tsd-signature-type">Message</span></h5>
-											</li>
-											<li>
-												<h5>page: <span class="tsd-signature-type">number</span></h5>
-											</li>
-											<li>
-												<h5>emoji: <span class="tsd-signature-type">string</span></h5>
-											</li>
-										</ul>
-										<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span>
-											<span class="tsd-signature-symbol"> | </span>
-											<span class="tsd-signature-type">undefined</span>
-										</h4>
-									</li>
-								</ul>
-							</li>
-						</ul>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>Do you want to use a cancel message?</p>
+						</div>
 					</div>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
-					<a name="emoji-1" class="tsd-anchor"></a>
-					<h3>emoji</h3>
-					<div class="tsd-signature tsd-kind-icon">emoji<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="cancelformat" class="tsd-anchor"></a>
+					<h3>cancel<wbr>Format</h3>
+					<div class="tsd-signature tsd-kind-icon">cancel<wbr>Format<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/1e85ccc/src/embedbuilder.ts#L21">embedbuilder.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/1e85ccc/src/reaction/pageupdater.ts#L18">reaction/pageupdater.ts:18</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>If cancel is true, then this is the format the cancel message will follow.
+							Use %u to reference the user.</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="invalidpage" class="tsd-anchor"></a>
+					<h3>invalid<wbr>Page</h3>
+					<div class="tsd-signature tsd-kind-icon">invalid<wbr>Page<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/1e85ccc/src/reaction/pageupdater.ts#L23">reaction/pageupdater.ts:23</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The message that is sent when it receives an invalid page.
+							Use %u to reference the user.</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="message" class="tsd-anchor"></a>
+					<h3>message</h3>
+					<div class="tsd-signature tsd-kind-icon">message<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/1e85ccc/src/reaction/pageupdater.ts#L8">reaction/pageupdater.ts:8</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The initial message to send. Use %u to reference the user.</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="success" class="tsd-anchor"></a>
+					<h3>success</h3>
+					<div class="tsd-signature tsd-kind-icon">success<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/1e85ccc/src/reaction/pageupdater.ts#L28">reaction/pageupdater.ts:28</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The message sent when it has received a valid page.
+							Use %u to reference the user, %n to get the number they gave.</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="time" class="tsd-anchor"></a>
+					<h3>time</h3>
+					<div class="tsd-signature tsd-kind-icon">time<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/muricans/discord-embedbuilder/blob/1e85ccc/src/reaction/pageupdater.ts#L9">reaction/pageupdater.ts:9</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -160,27 +198,39 @@
 					<li class=" tsd-kind-class">
 						<a href="../classes/pageupdater.html" class="tsd-kind-icon">Page<wbr>Updater</a>
 					</li>
+					<li class=" tsd-kind-interface tsd-is-private tsd-is-not-exported">
+						<a href="emoji.html" class="tsd-kind-icon">Emoji</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-private tsd-is-not-exported">
+						<a href="emojis.html" class="tsd-kind-icon">Emojis</a>
+					</li>
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-interface tsd-is-private tsd-is-not-exported">
-						<a href="emoji.html" class="tsd-kind-icon">Emoji</a>
+					<li class="current tsd-kind-interface">
+						<a href="pageupdateoptions.html" class="tsd-kind-icon">Page<wbr>Update<wbr>Options</a>
 						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
-								<a href="emoji.html#do" class="tsd-kind-icon">do</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="pageupdateoptions.html#cancel" class="tsd-kind-icon">cancel</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
-								<a href="emoji.html#emoji-1" class="tsd-kind-icon">emoji</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="pageupdateoptions.html#cancelformat" class="tsd-kind-icon">cancel<wbr>Format</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="pageupdateoptions.html#invalidpage" class="tsd-kind-icon">invalid<wbr>Page</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="pageupdateoptions.html#message" class="tsd-kind-icon">message</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="pageupdateoptions.html#success" class="tsd-kind-icon">success</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="pageupdateoptions.html#time" class="tsd-kind-icon">time</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-interface tsd-is-private tsd-is-not-exported">
-						<a href="emojis.html" class="tsd-kind-icon">Emojis</a>
-					</li>
-					<li class=" tsd-kind-interface">
-						<a href="pageupdateoptions.html" class="tsd-kind-icon">Page<wbr>Update<wbr>Options</a>
-					</li>
 				</ul>
 			</nav>
 		</div>
